fixed horizontal scroll bug

--- a/styles/portfolioSection.css
+++ b/styles/portfolioSection.css
@@ -1,9 +1,11 @@
 .portfolio-section {
   display: flex;
+  width: 100vw;
+  height: auto;
 }
 
 .section-text_wrapper-top {
-  background-color: yellow;
+  /* background-color: yellow; */
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -15,16 +17,18 @@
 }
 
 .section-text {
-  background-color: red;
+  /* background-color: red; */
   padding: 1rem 0px;
 }
 
 .projects-wrapper {
-  background-color: blue;
+  /* background-color: blue; */
   flex-grow: 2;
   width: 100vw;
   margin: auto;
 }
+
+/* CARD STYLES */
 
 .horizontal-scroll {
   overflow: hidden;
@@ -32,23 +36,24 @@
   overflow-y: hidden;
   white-space: nowrap;
   padding: 20px 20px;
+  width: 70vw;
 }
 
 .horizontal-scroll::-webkit-scrollbar {
   display: none;
 }
 
-/* CARD STYLES */
-.card {
-  background-color: red;
-  display: inline-block;
-  width: 28vw;
-  height: 100vh;
-  border: none;
-  text-align: center;
 
-  font-size: 20px;
-  transition: all 0.3s ease-in-out;
+.card {
+  /* background-color: red; */
+  display: inline-block;
+  width: 50vw;
+  height: 100%;
+  border: none;
+  text-align: left;
+
+  font-size: 1.5rem;
+
   margin: 10px;
 }
 
@@ -67,12 +72,12 @@
 .project-image {
  
     width: 100%;
-    height: 75vh;
-    overflow: hidden;
+    height: 100%;
+
 }
 
 .project-text {
-    background-color: green;
+    /* background-color: green; */
 
     transition: 0.3s all ease-in-out
 }
@@ -88,7 +93,4 @@
     word-wrap: break-word;
   } */
 
-.card:hover {
-  transform: scale(1.1);
-  z-index: 1;
-}
+
