--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,10 +3,13 @@
 }
 
 body {
+  width: 100%;
+  height: 100%;
   font-family: "Raleway", sans-serif;
   color: #a8a8a8;
   background-color: #19292d;
 
-  margin: 0;
+  margin: 2rem;
   overflow-x: hidden;
+  
 }
